<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lefties.CustomerPage">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/leftThumb"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F8B444"
                android:text="@string/leftThumb"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/Thumbnail"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Thumbnail"
                android:scaleType="fitEnd"
                app:srcCompat="@drawable/thumbnail" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:background="#8E0144"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/IncomingDelivery"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:text="@string/IncomingDelivery"
                android:textColor="#F8B444"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/From"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/From"
                        android:textColor="#EDE3E3" />

                    <TextView
                        android:id="@+id/FromD"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/FromD"
                        android:textColor="#DAD0D0"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/To"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/To"
                        android:textColor="#EDE6E6" />

                    <TextView
                        android:id="@+id/ToD"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/ToD"
                        android:textColor="#EAE3E3"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/At"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/At"
                        android:textColor="#F3ECEC" />

                    <TextView
                        android:id="@+id/AtD"
                        android:layout_width="46dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:text="@string/AtD"
                        android:textColor="#E4DDDD"
                        app:layout_constraintEnd_toEndOf="parent" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/fooditem"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fooditem"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fooditem">

            <Button
                android:id="@+id/food"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF6F6"
                android:text="@string/food"
                android:textColor="#8E0144"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/restaurants"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF6F6"
                android:text="@string/rest1"
                android:textColor="#8E0144"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="438dp"
            android:layout_height="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="409dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <Button
                android:id="@+id/All"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FBF6F6"
                android:text="@string/All"
                android:textColor="#8E0144" />

            <Button
                android:id="@+id/Featured"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF6F6"
                android:text="@string/Featured"
                android:textColor="#8E0144" />

            <Button
                android:id="@+id/Pastries"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/Pastries"
                android:textColor="#8E0144" />

            <Button
                android:id="@+id/Chicken"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF9F9"
                android:text="@string/Chicken"
                android:textColor="#8E0144" />

            <Button
                android:id="@+id/Vegetarian"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FAF6F6"
                android:text="@string/Vegetarian"
                android:textColor="#8E0144" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>