<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="203dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btnBack"
        android:textAlignment="textStart"
        android:textColor="#EF6E6C"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="344dp"
        android:layout_height="88dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#8E0144"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/listViewSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:background="@drawable/rounded_edittext" />

    <ListView
        android:id="@+id/listViewSummary"
        android:layout_width="409dp"
        android:layout_height="225dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext"
        app:checkedChip="@id/chipDelivery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDelivery"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F8B444"
            android:checked="true"
            android:text="@string/chipDelivery"
            android:textAlignment="center"
            android:textColor="#8E0144"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:chipBackgroundColor="#00000000" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPickup"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:text="@string/chipPickup"
            android:textAlignment="center"
            android:textColor="#8E0144"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:chipBackgroundColor="#001C1C1C" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="7dp"
        android:text="@string/txtTotal"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewSummary" />

    <TextView
        android:id="@+id/txtAmount"
        android:layout_width="147dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="42dp"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewSummary" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="#EF6E6C"
        android:text="@string/btnPlaceOrder"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOrderMore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnOrderMore"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="#FDFFFFFF"
        android:text="@string/btnOrderMore"
        android:textColor="#EF6E6C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>